      column-based entities will automatically issue
      "SELECT count(1) FROM (SELECT...)" so that the
      real rowcount is returned, meaning a query such as
      query(func.count(A.name)).count() will return a value of
      one, since that query would return one row.
      
- bugfixes and behavioral changes
- general:
    - global "propigate"->"propagate" change.

- orm
    - Query.get() returns a more informative
      error message when executed against multiple entities.
      [ticket:1220]

    - Restored NotImplementedError on Cls.relation.in_()
      [ticket:1140] [ticket:1221]
      
- sql
    - Removed the 'properties' attribute of the 
      Connection object, Connection.info should be used.
    
    - Restored "active rowcount" fetch before ResultProxy
      autocloses the cursor.  This was removed in 0.5rc3.
      
- access
    - Added support for Currency type.

    - Functions were not return their result. [ticket:1017]

    - Corrected problem with joins. Access only support 
      LEFT OUTER or INNER not just JOIN by itself. 
      [ticket:1017]

- mssql
    - Lots of cleanup and fixes to correct problems with
      limit and offset.

    - Correct situation where subqueries as part of a
      binary expression need to be translated to use the
      IN and NOT IN syntax.

    - Fixed E Notation issue that prevented the ability to
      insert decimal values less than 1E-6. [ticket:1216]

    - Corrected problems with reflection when dealing with
      schemas, particularly when those schemas are the
      default schema. [ticket:1217]

0.5.0rc3
========
- features
- orm
    - Added two new hooks to SessionExtension:
      after_bulk_delete() and after_bulk_update().
      after_bulk_delete() is called after a bulk delete()
      operation on a query. after_bulk_update() is called 
      after a bulk update() operation on a query.

- sql
    - SQL compiler optimizations and complexity
      reduction. The call count for compiling a